# team9capstone

./: (Ran)_model_LSN_DRAFT.ipynb  .gitignore  CLAUDE.md  Copy of VSR_notebook_v1.ipynb  LSN Training.ipynb  LipSyncNet_Model_effnet.ipynb  README.md  model_LSN_DRAFT.ipynb  pyproject.toml
.claude/: settings.local.json
configs/: identity.yaml  paper.yaml  transformer.yaml
docs/: data-format.md  future-work.md
docs/superpowers/plans/: 2026-04-29-lsn-notebook-to-codebase.md
docs/superpowers/specs/: 2026-04-29-lsn-notebook-to-codebase-design.md
notebooks/legacy/: LSN_TRAINING_EVAL.ipynb
results/: qualitative_examples_grid.csv  results_table_grid.csv
scripts/: infer.py  preprocess.py  report.py  train.py
src/lsn/: config.py  env.py
src/lsn/data/: datasets.py  normalize.py  splits.py  vocab.py
src/lsn/evaluation/: decoders.py  inference.py  metrics.py  report.py
src/lsn/models/: __init__.py  backends.py  frontend.py  lipsyncnet.py
src/lsn/preprocessing/: __init__.py  core.py
src/lsn/training/: checkpoint.py  hf_store.py  loop.py  runner.py
tests/: test_checkpoint.py  test_checkpoint_compat.py  test_config.py  test_datasets.py  test_decoders.py  test_env.py  test_hf_store.py  test_inference.py  test_loop.py  test_metrics.py  test_models_backends.py  test_models_builders.py  test_models_frontend.py  test_models_lipsyncnet.py  test_normalize.py  test_preprocessing.py  test_report.py  test_splits.py  test_vocab.py
tests/fixtures/: sample_config.yaml
tools/: dump_cell.py
