[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsn"
version = "0.1.0"
description = "LipSyncNet — lip-reading on GRID/LRS2 (capstone refactor)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "torchaudio>=2.1",
    "numpy>=1.24",
    "tqdm",
    "pyyaml",
    "matplotlib",
    "pandas",
    "huggingface_hub",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
